--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,5 @@
 # .github/workflows/publish.yml
-name: Generate a build and push to another branch
+name: build and push to production because we just don't care
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install all dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build
         run: npm run build # The build command of your project
